Added Exception Handling and multithreading for faster responses